--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>QR code component</title>
   </head>
   <body>
-    <Main>
-        <img src="./images/image-qr-code.png" alt="imagem do qr code">
+    <Main class="card">
+        <img src="./images/image-qr-code.png" class="imagem" alt="imagem do qr code">
         <h1>Improve your front-end<br> skills by building projects</h1>
         <p> Scan the QR code to visit Frontend<br> Mentor and take your coding
           skills to<br> the next level</p>
