--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <Main class="card">
         <img src="./images/image-qr-code.png" class="imagem" alt="imagem do qr code">
         <h1>Improve your front-end<br> skills by building projects</h1>
-        <p> Scan the QR code to visit Frontend<br> Mentor and take your coding
-          skills to<br> the next level</p>
+        <p> Scan the QR code to visit Frontend Mentor and take your coding
+          skills to the next level</p>
       <Main>
     </body>
   </html>
