--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32"
       href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
-    <title>QR code component</title>
+    <title>QR-code</title>
   </head>
   <body>
-    <Main class="card">
-        <img src="./images/image-qr-code.png" class="imagem" alt="imagem do qr code">
-        <h1>Improve your front-end<br> skills by building projects</h1>
-        <p> Scan the QR code to visit Frontend Mentor and take your coding
-          skills to the next level</p>
-      <Main>
+    <main>
+      <img class="favicon" src="./images/favicon-32x32.png" alt="favicon">
+      <img src="./images/image-qr-code.png" alt="imagem do qr code">
+      <div class="texto">
+        <h1>Improve your front-end skills by building projects</h1>
+        <p> Scan the QR code to visit Frontend Mentor and
+          take your codingskills to the next level
+        </p>
+      </main>
     </body>
   </html>
